--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,7 @@
       description: >
         Supervisor: Ilya Sergey
     - title: Undergraduate
-      institution: Sankt-Petersburg State University, Russia
+      institution: Saint-Petersburg State University, Russia
       year: 2018 - 2022
       description: >
         Supervisor: Evgenii Moiseenko
